--- a/src/components/catalogos/subcatalogo.css
+++ b/src/components/catalogos/subcatalogo.css
@@ -40,12 +40,12 @@
 
 
 .op2 {
-    padding: 1px 4%;
-    margin: 0 5% !important;
+    padding: 5px;
     color: white;
-    font-size: 15px !important;
+    font-size: 20px !important;
     background-color: #083c64;
     border-radius: 10px;
+    width: 100%;
 }
 
 /* tamaño de los productos */
