--- a/src/components/catalogos/catalogo.css
+++ b/src/components/catalogos/catalogo.css
@@ -11,6 +11,7 @@
   width: 100%;
   /* height: 600px; */
   /* margin: 0 auto; */
+  text-align: center;
   display: grid;
   grid-template-columns: 50% 50%;
 }
