--- a/src/components/top-bar/topbar.css
+++ b/src/components/top-bar/topbar.css
@@ -3,6 +3,8 @@
 .searchbarTop, .searchbarTopBlue {
     width: 100%;
     color: white !important;
+    display: block;
+    margin: auto;
 }
 
 .sc-ion-searchbar-md-h{
@@ -16,6 +18,7 @@
 
 .rowTop {
     background-color: #083c64;
+
 }
 
 .searchbarTopBlue .searchbar-input.sc-ion-searchbar-md {
